# open-emerald

./: .gitignore  Cargo.toml  README.md  deny.toml  graphics.py
.cargo/: config.toml
.reuse/: dep5
assets/: font.kayak_font
client/: Cargo.toml
client/assets/fonts/: latin_normal.font_config
client/src/: camera.rs  lerp.rs  main.rs
client/src/asset_loaders/: font_config.rs  mod.rs
client/src/battle/: mod.rs
client/src/main_menu/: mod.rs
client/src/overworld/: mod.rs
client/src/overworld/event_object/: mod.rs  movement.rs  player.rs
client/src/pokemon/: mod.rs
client/src/widgets/: menu_button.rs  mod.rs  sprited_text.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  server.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: camera.rs  lerp.rs  main.rs
src/battle/: mod.rs
src/main_menu/: mod.rs
src/pokemon/: mod.rs
src/widgets/: menu_button.rs  mod.rs  sprited_text.rs
