[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["wayland"] }
iyes_loopless = "0.9"
bevy_editor_pls = "0.2"
bevy_2d_animation = { git = "https://github.com/Mistrustfully/bevy_2d_animation" }
kayak_ui = { git  = "https://github.com/Mistrustfully/kayak_ui" } # Fork for NineTiled
serde_json = "1.0" 
serde = "1.0"
shared = { path = "../shared" }
server = { path = "../server" }
